<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Power Failure Monitor</string>
    <string name="start_stop_monitoring">Start / stop monitoring</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="invert_color" translatable="false">Invert Color</string>

    <string name="alarm_settings_title">Alarm settings</string>
    <string name="play_alarm_sound_title">Play alarm sound</string>
    <string name="play_alarm_sound_summary">Play alarm sound when power goes off</string>
    <string name="alarm_sound_smart_muting_title">Alarm sound smart muting</string>
    <string name="alarm_smart_muting_summary">Automatically mute alarm sound when human interaction is detected</string>
    <string name="sms_settings">SMS settings</string>
    <string name="power_is_off">Power is off</string>
    <string name="power_is_on">Power is on</string>
    <string name="power_off_msg_title">Power off message</string>
    <string name="power_on_msg_title">Power on message</string>
    <string name="send_sms_title">Send SMS</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="recipient_phone_number">Recipient phone number</string>
    <string name="email_settings">Email settings</string>
    <string name="send_email_title">Send email</string>
    <string name="recipient_email_address_title">Recipient email address</string>
    <string name="power_off_email_body_title">Power off email body</string>
    <string name="power_on_email_body">Power on email body</string>
    <string name="smtp_server_title">SMTP Server</string>
    <string name="sender_email_address_title">Sender email address</string>
    <string name="sender_email_password_title">Sender email password</string>
    <string name="email_use_default_summary_off">User specified settings will be used to send email messages</string>
    <string name="email_use_default_summary_on">simplepowerfailuremonitor@gmail.com will be used to send email messages</string>
    <string name="sms_alarm_settings">SMS alarm settings</string>
    <string name="alarming_message_title">Alarming SMS text</string>
    <string name="sms_alarm_title">Alarm when SMS received</string>
    <string name="stop_sms_alarm">Stop SMS alarm</string>
    <string name="alarming_sms_received">ALARMING SMS\nRECEIVED</string>
    <string name="monitoring_has_been_started">Monitoring has been started!</string>
    <string name="monitoring_has_been_stopped">Monitoring has been stopped!</string>
    <string name="the_phone_is_plugged">The phone is plugged</string>
    <string name="the_phone_is_not_plugged">The phone is not plugged</string>
    <string name="click_to_manage">Click to manage</string>
    <string name="use_default_email_sender">Use default email sender</string>
    <string name="alarming_sms_received_notif">Alarming SMS received</string>
    <string name="alarm_sound_title">Alarm sound</string>
    <string name="select_alarm_sound">Select alarm sound</string>
    <string name="help">Help</string>
    <string name="help_email_title" tools:ignore="MissingTranslation">Email</string>
    <string name="gmail_subsection_title" translatable="false">Gmail</string>
    <string name="gmail_help_paragraph">https://support.google.com/a/answer/176600\
https://support.google.com/accounts/answer/6010255\
https://support.google.com/a/answer/6260879\
Please note, if you use gmail account as a sender address you must enable \"Less secure app access\" option.</string>
    <string name="yahoo_subsection_title" translatable="false">Yahoo</string>
    <string name="yahoo_help_paragraph" translatable="false">https://help.yahoo.com/kb/sln4075.html</string>
    <string name="outlook_subsection_title" translatable="false">Outlook</string>
    <string name="outlook_help_paragraph" translatable="false">https://support.office.com/en-us/article/pop-imap-and-smtp-settings-for-outlook-com-d088b986-291d-42b8-9564-9c414e2aa040</string>
</resources>